# ZPE-Geo

./: .gitignore  AUDITOR_PLAYBOOK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md
code/: README.md  pyproject.toml
code/scripts/: __init__.py  common.py  gate_a_lock.py  gate_b_core_checks.py  gate_c_benchmarks.py  gate_d_falsification.py  gate_e_netnew_package.py  gate_e_package.py  gate_f_parity_closure.py  gate_m1_max_resources.py  gate_m2_autoware_attempt.py  gate_m3_scale_search.py  gate_m4_risk_closure.py  max_common.py  validate_artifacts.py
code/tests/: test_codec.py  test_h3bridge.py  test_search.py
code/zpe_geo/: __init__.py  codec.py  comparator.py  constants.py  datasets.py  geo.py  h3bridge.py  maneuver.py  metrics.py  paths.py  search.py  stream.py  utils.py
docs/: ARCHITECTURE.md  CANONICAL_DOC_REGISTRY.md  FAQ.md  LEGAL_BOUNDARIES.md  README.md  SUPPORT.md
proofs/: CONSOLIDATED_PROOF_REPORT.md  FINAL_STATUS.md  README.md
proofs/artifacts/2026-02-20_zpe_geo_wave1/: autoware_smoke_results.json  autoware_version_matrix.json  before_after_metrics.json  (+37 more)
proofs/runbooks/: REPO_DOCS_ALIGNMENT_PLAN_2026-03-21.md  RUNBOOK_ZPE_GEO_GATE_A.md  RUNBOOK_ZPE_GEO_GATE_B.md  RUNBOOK_ZPE_GEO_GATE_C.md  RUNBOOK_ZPE_GEO_GATE_D.md  RUNBOOK_ZPE_GEO_GATE_E.md  RUNBOOK_ZPE_GEO_GATE_E_NETNEW.md  RUNBOOK_ZPE_GEO_GATE_F.md  RUNBOOK_ZPE_GEO_GATE_M1.md  RUNBOOK_ZPE_GEO_GATE_M2.md  RUNBOOK_ZPE_GEO_GATE_M3.md  RUNBOOK_ZPE_GEO_GATE_M4.md  RUNBOOK_ZPE_GEO_MASTER.md
(+34 files in other folders)
